test/Fail/Erasure-No-Project-Erased-Match.err
Erasure-No-Project-Erased-Match.agda:14.32-33: error: [VariableIsErased]
Variable x is declared erased, so it cannot be used here
when checking that the expression x has type A
